--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,16 @@
 	"name": "hybridlogic/db-querybuilder",
 	"description": "SQL Query Builder for easily generating dynamic queries",
 	"keywords": ["db", "mysql", "sql", "query", "querybuilder"],
+	"homepage": "https://github.com/Dachande663/PHP-DB-QueryBuilder",
+	"license": "MIT",
+	"authors": [{
+		"name": "Luke Lanchester",
+		"email": "luke@lukelanchester.com",
+		"homepage": "http://hybridlogic.co.uk",
+		"role": "Developer"
+	}],
 	"require": {
-		"php": ">=5.3.0"
+		"php": ">=5.3.0",
+		"hybridlogic/db": ">=1.0.0"
 	}
 }
