--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 		"homepage": "http://hybridlogic.co.uk",
 		"role": "Developer"
 	}],
+	"autoload": {
+		"psr-0": {"HybridLogic": "src/"}
+	},
 	"require": {
 		"php": ">=5.3.0",
 		"hybridlogic/db": ">=1.0.0"
